--- a/firmware/docker-compose.yml
+++ b/firmware/docker-compose.yml
@@ -5,4 +5,5 @@ services:
       context: .
       dockerfile: Dockerfile
     volumes:
-      - ./build:/build
+      # :Z for SELinux compatibility
+      - ./build:/build:Z
